# aws-botorch-torchx

./: .dockerignore  .gitignore  AWS+training_+BoTorch+TorchX+-+Neural+architecture+search.doc  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-build.yaml
notebooks/: botorch_ax_mnist.html  botorch_ax_mnist.ipynb  mnist.py
