[tool.poetry]
name = "aws-botorch-torchx"
version = "0.1.0"
description = ""
authors = ["James Bristow <jbris@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
torch = "^2.5.1"
torchx = {extras = ["kubernetes"], version = "^0.7.0"}
botorch = "^0.12.0"
gpytorch = "^1.13"
ax-platform = "^0.4.3"
jupyter-core = "^5.7.2"
ipython = "^8.31.0"
ipywidgets = "^8.1.5"
jupyterlab = "^4.3.4"
notebook = "^7.3.2"
tensorboard = "^2.18.0"
pytorch-lightning = "^2.5.0.post0"
torchvision = "^0.20.1"
boto3 = "^1.35.92"
botocore = "^1.35.92"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
